Fix compatibility issues with Java 17 after merging latest functionality.